@@ -47,10 +47,79 @@ class TestPDCReader( unittest.TestCase ) :
 		self.assertEqual( type( r ), IECore.PDCParticleReader )
 		self.assertEqual( r["fileName"].getValue().value, "test/IECore/data/pdcFiles/particleShape1.250.pdc" )
 
-	def testRead( self ) :
+	def testReadWithPrimVarConversion( self ) :
 
 		r = IECore.Reader.create( "test/IECore/data/pdcFiles/particleShape1.250.pdc" )
 		self.assertEqual( type( r ), IECore.PDCParticleReader )
+		self.assertTrue( r.parameters()["convertPrimVarNames"].getTypedValue() )
+		
+		self.assertEqual( r.numParticles(), 25 )
+		attrNames = r.attributeNames()
+		expectedAttrNamesAndTypes = {
+			"particleId" : IECore.DoubleVectorData,
+			"mass" : IECore.DoubleVectorData,
+			"lastWorldVelocity" : IECore.V3dVectorData,
+			"worldVelocityInObjectSpace" : IECore.V3dVectorData,
+			"worldVelocity" : IECore.V3dVectorData,
+			"lastWorldPosition" : IECore.V3dVectorData,
+			"worldPosition" : IECore.V3dVectorData,
+			"acceleration" : IECore.V3dVectorData,
+			"lastVelocity" : IECore.V3dVectorData,
+			"velocity" : IECore.V3dVectorData,
+			"lastPosition" : IECore.V3dVectorData,
+			"position" : IECore.V3dVectorData,
+			"lifespanPP" : IECore.DoubleVectorData,
+			"finalLifespanPP" : IECore.DoubleVectorData,
+			"emitterId" : IECore.DoubleVectorData,
+			"birthTime" : IECore.DoubleVectorData,
+			"age" : IECore.DoubleVectorData,
+		}
+		self.assertEqual( len( attrNames ), len( expectedAttrNamesAndTypes ) )
+		for i in expectedAttrNamesAndTypes.keys() :
+			self.assert_( i in attrNames )
+		
+		expectedConvertedAttrNamesAndTypes = {
+			"particleId" : IECore.DoubleVectorData,
+			"mass" : IECore.DoubleVectorData,
+			"lastWorldVelocity" : IECore.V3dVectorData,
+			"worldVelocityInObjectSpace" : IECore.V3dVectorData,
+			"worldVelocity" : IECore.V3dVectorData,
+			"lastWorldPosition" : IECore.V3dVectorData,
+			"worldPosition" : IECore.V3dVectorData,
+			"acceleration" : IECore.V3dVectorData,
+			"lastVelocity" : IECore.V3dVectorData,
+			"velocity" : IECore.V3dVectorData,
+			"lastPosition" : IECore.V3dVectorData,
+			"P" : IECore.V3dVectorData,
+			"lifespanPP" : IECore.DoubleVectorData,
+			"finalLifespanPP" : IECore.DoubleVectorData,
+			"emitterId" : IECore.DoubleVectorData,
+			"birthTime" : IECore.DoubleVectorData,
+			"age" : IECore.DoubleVectorData,
+		}
+
+		c = r.read()
+		self.assertEqual( type( c ), IECore.PointsPrimitive )
+		self.assertEqual( len( c ), len( expectedConvertedAttrNamesAndTypes ) )
+		for i in expectedConvertedAttrNamesAndTypes.keys() :
+			self.assert_( i in c )
+			self.assertEqual( type(c[i].data), expectedConvertedAttrNamesAndTypes[i] )
+			self.assertEqual( len(c[i].data), r.numParticles() )
+
+		for p in c["P"].data :
+			self.assertEqual( p.y, 0 )
+			self.assert_( abs( p.x ) < 1.1 )
+			self.assert_( abs( p.z ) < 1.1 )
+
+		self.assertEqual( c["particleId"].data, IECore.DoubleVectorData( range( 0, 25 ) ) )
+		
+	def testReadNoPrimVarConversion( self ) :
+
+		r = IECore.Reader.create( "test/IECore/data/pdcFiles/particleShape1.250.pdc" )
+		self.assertEqual( type( r ), IECore.PDCParticleReader )
+		
+		r["convertPrimVarNames"].setValue( IECore.BoolData( False ) )
+		self.assertFalse( r.parameters()["convertPrimVarNames"].getTypedValue() )
 
 		self.assertEqual( r.numParticles(), 25 )
 		attrNames = r.attributeNames()
@@ -91,7 +160,7 @@ class TestPDCReader( unittest.TestCase ) :
 			self.assert_( abs( p.z ) < 1.1 )
 
 		self.assertEqual( c["particleId"].data, IECore.DoubleVectorData( range( 0, 25 ) ) )
-
+		
 	def testFiltering( self ) :
 
 		r = IECore.Reader.create( "test/IECore/data/pdcFiles/particleShape1.250.pdc" )
@@ -110,7 +179,8 @@ class TestPDCReader( unittest.TestCase ) :
 		p = r.read()
 		self.assert_( p.numPoints < 13 )
 		self.assert_( p.numPoints > 7 )
-		for attr in attributesToLoad :
+		convertedAttributesToLoad = [ "P", "age" ]
+		for attr in convertedAttributesToLoad :
 			self.assertEqual( p.numPoints, p[attr].data.size() )
 
 		# compare filtering with int ids		
@@ -145,7 +215,6 @@ class TestPDCReader( unittest.TestCase ) :
 
 		r.parameters()["realType"].setValue( "float" )
 
-		attrNames = r.attributeNames()
 		expectedAttrNamesAndTypes = {
 			"particleId" : IECore.FloatVectorData,
 			"mass" : IECore.FloatVectorData,
@@ -158,7 +227,7 @@ class TestPDCReader( unittest.TestCase ) :
 			"lastVelocity" : IECore.V3fVectorData,
 			"velocity" : IECore.V3fVectorData,
 			"lastPosition" : IECore.V3fVectorData,
-			"position" : IECore.V3fVectorData,
+			"P" : IECore.V3fVectorData,
 			"lifespanPP" : IECore.FloatVectorData,
 			"finalLifespanPP" : IECore.FloatVectorData,
 			"emitterId" : IECore.FloatVectorData,
@@ -174,7 +243,7 @@ class TestPDCReader( unittest.TestCase ) :
 			self.assertEqual( type(c[i].data), expectedAttrNamesAndTypes[i] )
 			self.assertEqual( len(c[i].data), r.numParticles() )
 
-		for p in c["position"].data :
+		for p in c["P"].data :
 			self.assertEqual( p.y, 0 )
 			self.assert_( abs( p.x ) < 1.1 )
 			self.assert_( abs( p.z ) < 1.1 )
@@ -189,7 +258,6 @@ class TestPDCReader( unittest.TestCase ) :
 
 		r.parameters()["realType"].setValue( "float" )
 
-		attrNames = r.attributeNames()
 		expectedAttrNamesAndTypes = {
 			"particleId" : IECore.FloatVectorData,
 			"mass" : IECore.FloatVectorData,
@@ -202,7 +270,7 @@ class TestPDCReader( unittest.TestCase ) :
 			"lastVelocity" : IECore.V3fVectorData,
 			"velocity" : IECore.V3fVectorData,
 			"lastPosition" : IECore.V3fVectorData,
-			"position" : IECore.V3fVectorData,
+			"P" : IECore.V3fVectorData,
 			"lifespanPP" : IECore.FloatVectorData,
 			"finalLifespanPP" : IECore.FloatVectorData,
 			"emitterId" : IECore.FloatVectorData,
@@ -218,7 +286,7 @@ class TestPDCReader( unittest.TestCase ) :
 			self.assertEqual( type(c[i].data), expectedAttrNamesAndTypes[i] )
 			self.assertEqual( len(c[i].data), r.numParticles() )
 
-		for p in c["position"].data :
+		for p in c["P"].data :
 			self.assertEqual( p.y, 0 )
 			self.assert_( abs( p.x ) < 1.1 )
 			self.assert_( abs( p.z ) < 1.1 )
@@ -234,7 +302,7 @@ class TestPDCReader( unittest.TestCase ) :
 			self.assertEqual( type(c[i].data), expectedAttrNamesAndTypes[i] )
 			self.assertEqual( len(c[i].data), 10 )
 
-		for p in c["position"].data :
+		for p in c["P"].data :
 			self.assertEqual( p.y, 0 )
 			self.assert_( abs( p.x ) < 1.1 )
 			self.assert_( abs( p.z ) < 1.1 )
